nhu la xuong can` khop, va nhu hoc sinh can lop'.. lop' lop' lop' love u <3

--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -29,6 +29,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=DESKTOP-6U5172J\MSSQLSERVER1;initial catalog=CNW_N8_TTHT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=DESKTOP-US2IRA4;initial catalog=CNW_N8_TTHT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
